service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquarelacs-front-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: aquarelacs-front
