aquarelacs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rota
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: teste.service-arthur.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aquarelacs-front-service
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
  - hosts:
    - aquarela.service-arthur.net
    secretName: quickstart-example-tls
  rules:
  - host: aquarela.service-arthur.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aquarelacs-front-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-grafana

spec:
  tls:
  - hosts:
    - grafana.service-arthur.net
    secretName: quickstart-tls
  rules:
  - host: grafana.service-arthur.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
