ingress.yaml
# user: admin
# pass: IV3iUXnB9fhHjdnD
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd-001
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: argocd.service-arthur.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd.service-arthur.net
    secretName: letsencrypt-production
